--- a/.github/workflows/say-hello.yml
+++ b/.github/workflows/say-hello.yml
@@ -4,5 +4,5 @@ jobs:
   say-hello:
     runs-on: ubuntu-latest
     steps:
-      uses: actions/checkout@v3
-      run: make say-hello
+      - uses: actions/checkout@v3
+      - run: make say-hello
